fix: wrapper add for layout fix

--- a/index.html
+++ b/index.html
@@ -9,6 +9,6 @@
     <link href="styles.css" rel="stylesheet">
 </head>
 <body>
-    <main><!-- JS Code here--></main>
+    <div class="wrapper"><!-- JS Code here--></div>
 </body>
 </html>
