--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Books-shop</title>
     <script src="index.js"></script>
     <link href="styles.css" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Flex:opsz,wght@8..144,100;8..144,200;8..144,300;8..144,400;8..144,500;8..144,600;8..144,700;8..144,800;8..144,900;8..144,1000&display=swap" rel="stylesheet">
 </head>
 <body>
     <div class="wrapper"><!-- JS Code here--></div>
