feat: add form validation up to flat nr

--- a/index.html
+++ b/index.html
@@ -44,13 +44,13 @@
                         <span class="alert street"></span>
                     </div>
                     <div class="input-wrapper">
-                        <label for="house-nr">House number</label>
-                        <input type="number" name="house-nr" id="house-nr" min="1">
+                        <label for="houseNr">House number</label>
+                        <input type="number" name="houseNr" id="houseNr" min="1">
                         <span class="alert house-nr"></span>
                     </div>
                     <div class="input-wrapper">
                         <label for="flat">Flat</label>
-                        <input type="number" name="flat" id="flat">
+                        <input type="text" name="flat" id="flat">
                         <span class="alert flat"></span>
                     </div>
                 </fieldset>
