feat: validation complete

--- a/index.html
+++ b/index.html
@@ -70,25 +70,25 @@
                     <legend>Gift - choose max two</legend>
                     <div class="input-wrapper">
                         <label for="gift">Pack as gift</label>
-                        <input type="checkbox" name="bonus" id="gift" value="gift">
+                        <input type="checkbox" name="gift" id="gift" value="gift">
                         <span class="alert gift"></span>
                     </div>
                     <div class="input-wrapper">
                         <label for="postcard">Add postcard</label>
-                        <input type="checkbox" name="bonus" id="postcard" value="postcard">
+                        <input type="checkbox" name="postcard" id="postcard" value="postcard">
                         <span class="alert postcard"></span>                      
                     </div>
                     <div class="input-wrapper">
                         <label for="discount">2% discount for next order</label>
-                        <input type="checkbox" name="bonus" id="discount" value="discount">
+                        <input type="checkbox" name="discount" id="discount" value="discount">
                         <span class="alert discount"></span>
                     </div>
                     <div class="input-wrapper">
                         <label for="pencil">Branded pen or pencil</label>
-                        <input type="checkbox" name="bonus" id="pencil" value="pencil">                        
+                        <input type="checkbox" name="pencil" id="pencil" value="pencil">                        
                     </div>
                 </fieldset>
-                <button id="submit" class="submit-btn disabled" type="submit" disabled>Submit</button>
+                <button id="submit" class="submit-btn disabled" type="submit">Submit</button>
             </form>
         </div>
     </div>
